@@ -1,4 +1,4 @@
-name    = Dancer-Plugin-SSLify
+name    = Dancer-Plugin-RequireSSL
 author  = Natal Ngétal
 license = Perl_5
 copyright_holder = Natal Ngétal
